examples/test/testpolicy5875.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5875
  namespace: namespace155
spec:
  podSelector:
    matchLabels:
      key16: value22
      key43: value39
      key17: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value22
          key1: value38
      podSelector:
        matchLabels:
          key30: value21
